apps/tools/rundeck/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rundeck
  namespace: rundeck
  labels:
    app: rundeck
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rundeck
  template:
    metadata:
      labels:
        app: rundeck
    spec:
      containers:
        - name: rundeck
          image: rundeck/rundeck:5.0.0
          ports:
            - containerPort: 4440
          volumeMounts:
            # - name: aclpolicy
            #   mountPath: /home/rundeck/etc/user.aclpolicy
            #   subPath: user.aclpolicy
            - name: rundeck-persistent-storage
              mountPath: /home/rundeck/projects
              subPath: projects
            - name: rundeck-persistent-storage
              mountPath: /home/rundeck/libext
              subPath: libext
      volumes:
        # - name: aclpolicy
        #   secret:
        #     secretName: rundeck-adm-policy
        #     items:
        #       - key: rundeck-admin-role.yaml
        #         path: user.aclpolicy
        - name: rundeck-persistent-storage
          persistentVolumeClaim:
            claimName: rundeck
