apps/tools/rundeck/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rundeck-svc
  namespace: rundeck
spec:
  selector:
    app: rundeck
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4440
      name: web
